--- a/src/index.html
+++ b/src/index.html
@@ -30,9 +30,9 @@
     <include src="./partials/footer.html"></include> <!-- 1-Aleksandra -->
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
-    <script defer src="./js/mobile-menu.js"></script>
+    <!-- <script defer src="./js/mobile-menu.js"></script>
     <script src="./js/modal-buy.js"></script>
     <script src="./js/modal-review.js"></script>
-    <script src="./js/modal-explore.js"></script>
+    <script src="./js/modal-explore.js"></script> -->
   </body>
 </html>
