upgrade teamwork init

--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,15 @@
             <include src="./partials/subscribe.html"></include> <!-- 2-Martyna -->
         </main>
     <include src="./partials/footer.html"></include> <!-- 1-Aleksandra -->
+    <include src="./partials/toggle-menu.html"></include> <!--  -->
+    <include src="./partials/modal-buy.html"></include> <!--  -->
+    <include src="./partials/modal-review.html"></include> <!--  -->
+    <include src="./partials/modal-subscribe.html"></include> <!--  -->
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
-    <!-- <script defer src="./js/mobile-menu.js"></script>
-    <script src="./js/modal-buy.js"></script>
-    <script src="./js/modal-review.js"></script>
-    <script src="./js/modal-explore.js"></script> -->
+    <!-- <script defer src="./js/mobile-menu.js"></script> -->
+    <!-- <script src="./js/modal-buy.js"></script>-->
+    <!-- <script src="./js/modal-review.js"></script>-->
+    <!-- <script src="./js/modal-explore.js"></script> -->
   </body>
 </html>
