update common elements

--- a/src/index.html
+++ b/src/index.html
@@ -34,9 +34,9 @@
     <include src="./partials/modal-subscribe.html"></include> <!--  -->
     <!-- Skrypt jest na samym dole kodu. On juz ma w sobie podłączony SAAS plik. -->
     <script src="./index.js" type="module"></script>
-    <!-- <script defer src="./js/mobile-menu.js"></script> -->
-    <!-- <script src="./js/modal-buy.js"></script>-->
-    <!-- <script src="./js/modal-review.js"></script>-->
-    <!-- <script src="./js/modal-explore.js"></script> -->
+    <script defer src="js/mobile-menu.js"></script>
+    <script src="js/modal-buy.js"></script>
+    <script src="js/modal-review.js"></script>
+    <script src="js/modal-explore.js"></script>
   </body>
 </html>
