corrected modal explore/subscribe

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
   <script defer src="js/mobile-menu.js"></script>
   <script src="js/modal-buy.js"></script>
   <script src="js/modal-review.js"></script>
-  <script src="js/modal-explore.js"></script>
+  <script src="js/modal-subscribe.js"></script>
 </body>
 
 </html>
